--- a/src/main/html/css/screen.css
+++ b/src/main/html/css/screen.css
@@ -666,6 +666,10 @@
   color: black;
   text-decoration: none;
 }
+.swagger-section .swagger-ui-wrap ul#resources li.resource ul.endpoints li.endpoint ul.operations li.operation div.heading h3 span.path a.deprecated {
+  color: #666666;
+  text-decoration: line-through;
+}
 .swagger-section .swagger-ui-wrap ul#resources li.resource ul.endpoints li.endpoint ul.operations li.operation div.heading h3 span.path a:hover {
   text-decoration: underline;
 }
