--- a/src/main/html/css/screen.css
+++ b/src/main/html/css/screen.css
@@ -122,7 +122,7 @@
 }
 .swagger-section .swagger-ui-wrap {
   line-height: 1;
-  font-family: "Droid Sans", sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   max-width: 960px;
   margin-left: auto;
   margin-right: auto;
@@ -1165,15 +1165,15 @@
   cursor: pointer;
 }
 .swagger-section #header {
-  background-color: #89bf04;
+  background-color: #222;
   padding: 14px;
 }
 .swagger-section #header a#logo {
   font-size: 1.5em;
   font-weight: bold;
   text-decoration: none;
-  background: transparent url(../images/logo_small.png) no-repeat left center;
-  padding: 20px 0 20px 40px;
+  background: transparent url(../images/rei_small.png) no-repeat left center;
+  padding: 20px 0 20px 60px;
   color: white;
 }
 .swagger-section #header form#api_selector {
