--- a/src/main/less/screen.less
+++ b/src/main/less/screen.less
@@ -72,14 +72,14 @@
 }
 
 #header {
-    background-color: #89bf04;
+    background-color: #222;
     padding: 14px;
     a#logo {
         font-size: 1.5em;
         font-weight: bold;
         text-decoration: none;
-        background: transparent url(../images/logo_small.png) no-repeat left center;
-        padding: 20px 0 20px 40px;
+        background: transparent url(../images/rei_small.png) no-repeat left center;
+        padding: 20px 0 20px 60px;
         color: white;
     }
     form#api_selector {
