--- a/src/main/less/specs.less
+++ b/src/main/less/specs.less
@@ -3,7 +3,7 @@
 .swagger-ui-wrap {
 
     line-height: 1;
-    font-family: "Droid Sans", sans-serif;
+    font-family:  "Helvetica Neue",Helvetica,Arial,sans-serif;
     max-width: 960px;
     margin-left: auto;
     margin-right: auto;
